--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+iframe<!DOCTYPE html>
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
@@ -7,5 +7,12 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <title>Projetos Redes Sociaist</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <section id="telefone">
+        <iframe src="tela.html" frameborder="0" name="tela" id="tela"></iframe>
+      </section>
+      <section id="rede"></section>
+    </main>
+  </body>
 </html>
