--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-iframe<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
@@ -9,10 +9,21 @@ iframe<!DOCTYPE html>
   </head>
   <body>
     <main>
-      <section id="telefone">
-        <iframe src="tela.html" frameborder="0" name="tela" id="tela"></iframe>
-      </section>
-      <section id="rede"></section>
+      <div class="links">
+        <a href="#" id="insta"></a>
+        <a href="#" id="git"></a>
+        <a href="#" id="face"></a>
+        <a href="#" id="home"></a>
+      </div>
+      <div class="telefone">
+        <iframe
+          src="tela.html"
+          frameborder="0"
+          name="tela"
+          class="tela"
+        ></iframe>
+      </div>
+      <div class="rede"></div>
     </main>
   </body>
 </html>
