--- a/tela.html
+++ b/tela.html
@@ -13,6 +13,7 @@
         width: 100vw;
         height: 100vh;
         background: black url(imagens/tela-home.jpg) no-repeat center top;
+        background-size: cover;
       }
     </style>
   </head>
