--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="#" id="face"></a>
         <a href="#" id="insta"></a>
       </div>
+      <div>
       <div class="telefone">
         <iframe
           src="tela.html"
@@ -23,6 +24,8 @@
           class="tela"
         ></iframe>
       </div>
+    </div>
+
       <div class="rede"></div>
     </main>
   </body>
