--- a/index.html
+++ b/index.html
@@ -9,23 +9,22 @@
   </head>
   <body>
     <main>
+      <div class="telefone-container">
+        <div class="telefone">
+          <iframe
+            src="tela.html"
+            frameborder="0"
+            name="tela"
+            class="tela"
+          ></iframe>
+        </div>
+      </div>
       <div class="links">
         <a href="#" id="home"></a>
         <a href="#" id="git"></a>
         <a href="#" id="face"></a>
         <a href="#" id="insta"></a>
       </div>
-      <div>
-      <div class="telefone">
-        <iframe
-          src="tela.html"
-          frameborder="0"
-          name="tela"
-          class="tela"
-        ></iframe>
-      </div>
-    </div>
-
       <div class="rede"></div>
     </main>
   </body>
