--- a/index.html
+++ b/index.html
@@ -20,10 +20,16 @@
         </div>
       </div>
       <div class="links">
-        <a href="#" id="home"></a>
-        <a href="#" id="git"></a>
-        <a href="#" id="face"></a>
-        <a href="#" id="insta"></a>
+        <a
+          href="tela.html"
+          id="home"
+          src="imagens/logo-home.jpg"
+          alt="home"
+          target="tela"
+        ></a>
+        <a href="git.html" id="git" target="tela"></a>
+        <a href="face.html" id="face" target="tela"></a>
+        <a href="insta.html" id="insta" target="tela"></a>
       </div>
       <div class="rede"></div>
     </main>
